# vld

./: .gitignore  CMakeLists.txt  vld.h  vld.vcxproj  vld_vc12.vcxproj  vld_vs10.sln  vldrt.cmake
src/: vld.vcxproj
tests/suite/: testsuite.vcxproj
